--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -74,7 +74,7 @@
 }
 
 
-.icon {
+i.icon {
   display: none;
   opacity: 100%;
   color: green;
